--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -7,12 +7,12 @@
     position: relative;
     display: flex;
     justify-content: center;
-    height: 100%;
-    background-color: rgba(42, 44, 47, .3);
+    min-height: calc(1184px * 0.625);
 }
 
-.cover__overlay:hover {
-    background-color: rgba(42, 44, 47, .8);
-    transition: background-color .5s ease-out;
+@media screen and (max-width: 1184px) {
+    .cover__overlay {
+        max-width: 100%;
+        min-height: calc(100vw * 0.625);
+    }
 }
-
