--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,11 +4,15 @@
     margin-right: 18px;
     font-size: 16px;
     line-height: 18px;
+    transition: opacity .2s linear;  
+}
+
+.footer__link:last-of-type {
+    margin-right: 0;
 }
 
 .footer__link:hover {
     opacity: .8;
-    transition: opacity .2s linear;  
 }
 
 @media screen and (max-width: 710px) {
