--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -4,8 +4,16 @@
     font-size: 24px;
     line-height: 28px;
     font-weight: 400;
+    transition: opacity .2s linear;  
 }
 
-.header__link:first-of-type {
-    text-decoration: underline;
+.header__link:hover {
+    opacity: .8;
+}
+
+@media screen and (max-width: 320px) {
+    .header__link {
+        font-size: 18px;
+        line-height: 20px;
+    }
 }
