--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,8 +5,6 @@
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 1.5px;
-    display: inline-block;
-    align-self: flex-start;
     padding: 8px 0 0;
     margin: 0;
 }
@@ -14,6 +12,12 @@
 @media screen and (max-width: 984px) {
     .lead__caption {
         padding: 16px 0 0 24px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__caption {
+        padding: 8px 0 0 24px;
     }
 }
 
