--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,6 +6,12 @@
     margin: 32px auto 64px;
 }
 
+@media screen and (max-width: 1024px) {
+    .lead__subtitle {
+    margin: 32px auto 56px;
+    }
+}
+
 @media screen and (max-width: 750px) {
     .lead__subtitle {
         font-size: 16px;
