--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,13 +5,17 @@
     max-width: 720px;
     margin: 56px auto 0;
 }
+@media screen and (max-width: 1024px) {
+    .lead__title {
+        margin: 48px auto 0;
+    }
+}
 
 @media screen and (max-width: 750px) {
     .lead__title {
         max-width: 90%;
         font-size: 40px;
         line-height: 44px;
-        font-weight: 900;
         margin: 48px auto 0;
     }
 }
