--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -23,6 +23,12 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .photo-grid {
+        padding: 88px 0;
+    }
+}
+
 @media screen and (max-width: 750px) {
     .photo-grid {
         grid-template-columns: repeat(1, 1fr);
