--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,6 +14,6 @@
 
 @media screen and (max-width: 750px) {
     .place__paragraph {
-        padding: 0 16px 25px 16px;
+        padding: 0 16px;
     }
 }
