--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,8 +1,8 @@
 .place__url-heading {
-    margin: 0;
+    margin: 0 0 12px 0;
     color: rgba(170, 170, 170, 1);
     font-size: 12px;
     line-height: 1;
     letter-spacing: 2px;
-    margin-bottom: 12px;
+    text-transform: uppercase;
 }
